@@ -139,15 +139,21 @@
 							</config>
 						</TCEforms>
 				      </spamprotectionmode>
-					<detailpage>
+					<detailPage>
 						<TCEforms>
-							<label>LLL:EXT:bzd_staff_directory/locallang_db.php:tt_content.pi_flexform.detailpage</label>
-							<config>
-								<type>input</type>
-								<size>4</size>
-							</config>
+						<exclude>1</exclude>
+						<label>LLL:EXT:bzd_staff_directory/locallang_db.php:tt_content.pi_flexform.detailPage</label>
+						<config>
+							<type>group</type>
+							<internal_type>db</internal_type>
+							<allowed>pages</allowed>
+							<size>3</size>
+							<maxitems>1</maxitems>
+							<minitems>0</minitems>
+							<show_thumbs>1</show_thumbs>
+						</config>
 						</TCEforms>
-					</detailpage>
+					</detailPage>
 					<sortOrder>
 						<TCEforms>
 							<label>LLL:EXT:bzd_staff_directory/locallang_db.php:tt_content.pi_flexform.sortOrder</label>
